--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
                     // Set card content with the date and other content
                     card.innerHTML = `
                         <h3>Submitted on: ${formattedDate}</h3>
-                        <p><strong>Kudos:</strong> ${columns[1]}</p>
-                        <p><strong>What went well:</strong> ${columns[2]}</p>
-                        <p><strong>What to improve:</strong> ${columns[3]}</p>
-                        <p><strong>Additional Question:</strong> ${columns[4]}</p>
+                        <p><strong>Group Member:</strong> ${columns[1]}</p>
+                        <p><strong>Kudos:</strong> ${columns[2]}</p>
+                        <p><strong>What went well:</strong> ${columns[3]}</p>
+                        <p><strong>What to improve:</strong> ${columns[4]}</p>
+                        <p><strong>Additional Question:</strong> ${columns[5]}</p>
                     `;
 
                     cardContainer.appendChild(card);
