--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </style>
 </head>
 <body>
-    <h1>Kudos Board</h1>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDy9vfpsI5V-yNBr9WgD81B2ZwvBYFcjApFO3zuEbHfEBB6A/viewform">
+      <h1>Kudos Board</h1>
+    </a>
     <div id="cards" class="card-container"></div>
 
     <script>
